checkbox and button

--- a/frontend/src/locales/zh_TW.json
+++ b/frontend/src/locales/zh_TW.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "清除過濾條件",
   "mytasks.navFilters.error": "載入任務時的錯誤",
   "mytasks.pagination.count": "顯示 {total} 的  {number}",
+  "mytasks.nav.xNew": "{xNew} 新的",
   "mytasks.nav.lastUpdatedBy": "上次更新時間 {time}",
   "mytasks.nav.viewAll": "檢視全部",
   "mytasks.nav.delete.button": "刪除",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "",
   "project.detail.sections.contributionsTimeline": "",
   "project.detail.sections.contributions.osmcha": "",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "",
   "project.detail.sections.relatedProjects": "",
   "project.detail.sections.contributions.timelineError": "",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "中階",
   "project.level.beginner": "新手",
   "project.level.new_users": "新使用者",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "",
   "project.permissions.error.userLevelToValidate": "",
   "project.permissions.error.userLevelToMap": "",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "",
   "pages.learn.videos.map_buildings.title": "",
   "pages.learn.videos.map_buildings.description": "",
-  "pages.learn.validate.video.title": "",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "學習如何審核",
   "pages.learn.validate.intro": "",
   "pages.learn.validate.description": "",
