--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Clear filters",
   "mytasks.navFilters.error": "Error while loading the tasks",
   "mytasks.pagination.count": "Showing {number} of {total}",
+  "mytasks.nav.xNew": "{xNew} New",
   "mytasks.nav.lastUpdatedBy": "Last updated {time}",
   "mytasks.nav.viewAll": "View All",
   "mytasks.nav.delete.button": "Delete",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Contributions",
   "project.detail.sections.contributionsTimeline": "Contributions timeline",
   "project.detail.sections.contributions.osmcha": "Changesets in OSMCha",
-  "project.detail.sections.contributions.changesets": "Changesets",
   "project.detail.sections.contributors": "Contributors",
   "project.detail.sections.relatedProjects": "Related projects",
   "project.detail.sections.contributions.timelineError": "A timeline is going to be available after the first task has been mapped.",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "Are you sure you want to validate all tasks? You cannot undo this.",
   "projects.actions.validate_all_tasks.description": "This will change the status of all tasks (except 'unavailable' ones) to 'finished'. Please use this only if you are sure of what you are doing.",
   "projects.actions.validate_all_tasks.success": "The tasks were validated successfully.",
-  "projects.actions.validate_all_tasks.error": "Validating all the tasks failed for an unknown reason.",
+  "projects.actions.validate_all_tasks.error": "Invalidating all the tasks failed for an unknown reason.",
   "projects.actions.reset_bad_imagery_tasks.title": "Reset tasks marked as unavailable",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "Are you sure you want to reset all tasks marked as unavailable in this project? You cannot undo this.",
   "projects.actions.reset_bad_imagery_tasks.description": "This will change the status of those tasks to 'ready for mapping'. Please use this only if you are sure of what you are doing.",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Intermediate",
   "project.level.beginner": "Beginner",
   "project.level.new_users": "New users",
-  "project.contributions.stats": "Statistics",
   "project.permissions.error.title": "You are not ready to work on this project...",
   "project.permissions.error.userLevelToValidate": "Only users with intermediate or advanced experience level can validate this project.",
   "project.permissions.error.userLevelToMap": "Only users with intermediate or advanced experience level can map this project.",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "Define your preferred language. It will also affect the language of the maps you see on Tasking Manager.",
   "user.settings.become_validator": "Become a validator",
   "user.settings.become_validator.description": "Validators check the quality of map edits completed and provide feedback for mappers on how to improve. If you are an experienced mapper, apply to become a validator.",
-  "user.notifications.mentions": "Mentions emails",
-  "user.notifications.mentions.description": "Receive an email every time your username is mentioned on a comment.",
+  "user.notifications.mentions": "Mentions",
+  "user.notifications.mentions.description": "Every time you're mentioned on a comment, you get a notification.",
   "user.notifications.projects": "Project updates",
   "user.settings.required": "Required fields",
   "user.notifications.projects.description": "You get a notification when a project you have contributed to makes progress.",
   "user.notifications.comments": "Comments",
-  "user.notifications.comments.description": "Receive a notification every time someone posts a comment on projects or tasks you have contributed to.",
+  "user.notifications.comments.description": "You get a notification every time someone comments on the project you've contributed to.",
   "user.settings.become_validator.button": "Learn how",
   "user.welcome.title": "Welcome to Tasking Manager!",
   "user.interests.update.success": "Interests updated successfully.",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "Learn how to map roads on OpenStreetMap.",
   "pages.learn.videos.map_buildings.title": "Select a task & mapping buildings",
   "pages.learn.videos.map_buildings.description": "Learn how to map buildings on OpenStreetMap.",
-  "pages.learn.validate.video.title": "How to validate",
-  "pages.learn.validate.video.description": "Learn how to start validating projects on Tasking Manager.",
   "pages.learn.validate_title": "Learn to validate",
   "pages.learn.validate.intro": "Validation is an important part of the process. It requires confidence in your mapping abilities as well as the willingness to help coach and advise newer mappers.",
   "pages.learn.validate.description": "Getting a second, third, or fourth pair of eyes on mapped features is an important step for ensuring the quality of the data being added to OpenStreetMap and then used around the world.",
