--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Borrar filtros",
   "mytasks.navFilters.error": "Error al cargar las tareas",
   "mytasks.pagination.count": "Mostrando {number} de {total}",
+  "mytasks.nav.xNew": "{xNew} Nuevo",
   "mytasks.nav.lastUpdatedBy": "Última actualización {time}",
   "mytasks.nav.viewAll": "Ver todo",
   "mytasks.nav.delete.button": "Eliminar",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Contribuciones",
   "project.detail.sections.contributionsTimeline": "Cronología de contribuciones",
   "project.detail.sections.contributions.osmcha": "Conjunto de cambios en OSMCha",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "Colaboradores",
   "project.detail.sections.relatedProjects": "Proyectos relacionados",
   "project.detail.sections.contributions.timelineError": "La línea de tiempo estará disponible después de que la primera tarea haya sido mapeada.",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "¿Está seguro de que quiere validar todas las tareas? No podrá deshacer esta orden.",
   "projects.actions.validate_all_tasks.description": "Esto cambiará el estado de todas las tareas (excepto las 'no disponibles') a 'finalizadas'. Use esto solo si está seguro de lo que está haciendo.",
   "projects.actions.validate_all_tasks.success": "Las tareas fueron validadas con éxito.",
-  "projects.actions.validate_all_tasks.error": "Validación de todas las tareas falló por un motivo desconocido.",
+  "projects.actions.validate_all_tasks.error": "La invalidación de todas las tareas falló por algún motivo desconocido.",
   "projects.actions.reset_bad_imagery_tasks.title": "Restablecer tareas marcadas como no disponibles",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "¿Está seguro de que desea restablecer todas las tareas marcadas como no disponibles en este proyecto? No podrá deshacer esta orden.",
   "projects.actions.reset_bad_imagery_tasks.description": "Esto cambiará el estado de esas tareas a 'listo para mapear'. Use esto solo si está seguro de lo que está haciendo.",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Intermedio",
   "project.level.beginner": "Principiante",
   "project.level.new_users": "Nuevos usuarios",
-  "project.contributions.stats": "Estadísticas",
   "project.permissions.error.title": "No estás listo para trabajar en este proyecto...",
   "project.permissions.error.userLevelToValidate": "Sólo los usuarios con un nivel de experiencia intermedio o avanzado pueden validar este proyecto.",
   "project.permissions.error.userLevelToMap": "Solo los usuarios con nivel de experiencia intermedio o avanzado pueden mapear este proyecto.",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "Define tu idioma preferido. También afectará el idioma de los mapas que ve en Tasking Manager.",
   "user.settings.become_validator": "Conviértase en un validador",
   "user.settings.become_validator.description": "Los validadores verifican la calidad de las ediciones de mapas completadas y proporcionan comentarios a los mapeadores sobre cómo mejorar. Si es un mapeador experimentado, solicite convertirse en un validador.",
-  "user.notifications.mentions": "Menciones por correos electrónicos",
-  "user.notifications.mentions.description": "Reciba un correo electrónico cada vez que se mencione su nombre de usuario en un comentario.",
+  "user.notifications.mentions": "Menciones",
+  "user.notifications.mentions.description": "Cada vez que te mencionan en un comentario, recibirá una notificación.",
   "user.notifications.projects": "Actualizaciones del proyecto",
   "user.settings.required": "Campos requeridos",
   "user.notifications.projects.description": "Recibirá una notificación cuando un proyecto al que haya contribuido progrese.",
   "user.notifications.comments": "Comentarios",
-  "user.notifications.comments.description": "Reciba una notificación cada vez que alguien publique un comentario sobre proyectos o tareas a las que haya contribuido.",
+  "user.notifications.comments.description": "Recibirá una notificación cada vez que alguien comenta sobre el proyecto al que has contribuido.",
   "user.settings.become_validator.button": "Aprender cómo",
   "user.welcome.title": "¡Bienvenido al Tasking Manager!",
   "user.interests.update.success": "Intereses actualizados con éxito.",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "Aprende a mapear calles y carreteras en OpenStreetMap.",
   "pages.learn.videos.map_buildings.title": "Seleccionar una tarea y mapear edificios",
   "pages.learn.videos.map_buildings.description": "Aprende a mapear edificios en OpenStreetMap.",
-  "pages.learn.validate.video.title": "Cómo validar",
-  "pages.learn.validate.video.description": "Obtenga información sobre cómo empezar a validar proyectos en el Tasking Manager.",
   "pages.learn.validate_title": "Aprende a validar",
   "pages.learn.validate.intro": "La validación es una parte importante del proceso. Requiere confianza en sus habilidades de mapeo, así como la voluntad de ayudar a entrenar y asesorar a los mapeadores más nuevos.",
   "pages.learn.validate.description": "Obtener más de una revisión de los elementos mapeados es un paso importante para garantizar la calidad de los datos que se añadirán a OpenStreetMap y serán usados en todo el mundo.",
