--- a/frontend/src/locales/fa_IR.json
+++ b/frontend/src/locales/fa_IR.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "پاک کردن فیلتر ها",
   "mytasks.navFilters.error": "",
   "mytasks.pagination.count": "در حال نمایش {number} از {total}",
+  "mytasks.nav.xNew": "{xNew} جدید",
   "mytasks.nav.lastUpdatedBy": "",
   "mytasks.nav.viewAll": "دیدن همه",
   "mytasks.nav.delete.button": "حذف",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "",
   "project.detail.sections.contributionsTimeline": "",
   "project.detail.sections.contributions.osmcha": "",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "",
   "project.detail.sections.relatedProjects": "پروژه های مرتبط",
   "project.detail.sections.contributions.timelineError": "",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "متوسط",
   "project.level.beginner": "تازه‌کار",
   "project.level.new_users": "",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "",
   "project.permissions.error.userLevelToValidate": "",
   "project.permissions.error.userLevelToMap": "",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "",
   "pages.learn.videos.map_buildings.title": "",
   "pages.learn.videos.map_buildings.description": "",
-  "pages.learn.validate.video.title": "",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "",
   "pages.learn.validate.intro": "",
   "pages.learn.validate.description": "",
