--- a/frontend/src/locales/hu.json
+++ b/frontend/src/locales/hu.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Szűrők törlése",
   "mytasks.navFilters.error": "Hiba történt a feladatok betöltésénél",
   "mytasks.pagination.count": "{number} megjelenítése ennyiből: {total}",
+  "mytasks.nav.xNew": "{xNew} új",
   "mytasks.nav.lastUpdatedBy": "Utoljára frissítve: {time}",
   "mytasks.nav.viewAll": "Összes megtekintése",
   "mytasks.nav.delete.button": "Törlés",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Szerkesztések",
   "project.detail.sections.contributionsTimeline": "Szerkesztési idővonal",
   "project.detail.sections.contributions.osmcha": "Módosításkészletek az OSMCha-ba (OSM Changeset Analyzer, módosításkészlet-elemző)",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "Szerkesztők",
   "project.detail.sections.relatedProjects": "Kapcsolódó projektek",
   "project.detail.sections.contributions.timelineError": "Az idővonal az első feladat térképezése után lesz látható.",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "Biztosan érvényesíti az összes feladatot? Ez a művelet nem vonható vissza.",
   "projects.actions.validate_all_tasks.description": "Ez (a „nem elérhetők” kivételével) az összes feladat állapotát megváltoztatja „kész”-re. Kérjük, csak akkor használja, ha tudja, mit csinál.",
   "projects.actions.validate_all_tasks.success": "A feladatok sikeresen érvényesültek.",
-  "projects.actions.validate_all_tasks.error": "",
+  "projects.actions.validate_all_tasks.error": "Az összes feladat érvénytelenítése ismeretlen okból meghiúsult.",
   "projects.actions.reset_bad_imagery_tasks.title": "A nem elérhetőként megjelölt feladatok alaphelyzetbe állítása",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "Biztosan alaphelyzetbe állítja a projektben nem elérhetőként megjelölt összes feladatot? Ez a művelet nem vonható vissza.",
   "projects.actions.reset_bad_imagery_tasks.description": "Ez azoknak a feladatoknak az állapotát megváltoztatja „térképezésre kész”-re. Kérjük, csak akkor használja, ha tudja, mit csinál.",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Középhaladó",
   "project.level.beginner": "Kezdő",
   "project.level.new_users": "",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "Nem áll készen arra, hogy ezen a munkán dolgozzék…",
   "project.permissions.error.userLevelToValidate": "Ezt a projektet csak a középhaladó vagy haladó szintű felhasználó érvényesítheti.",
   "project.permissions.error.userLevelToMap": "Ezt a projektet csak a középhaladó vagy haladó szintű felhasználó szerkesztheti.",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "Adja meg a kívánt nyelvet. Ez a Tasking Managerben látható térképek nyelvét is befolyásolja.",
   "user.settings.become_validator": "Legyen érvényesítő",
   "user.settings.become_validator.description": "Az érvényesítők ellenőrzik a befejezett térképszerkesztések minőségét, és visszajelzést adnak a térképezőknek arról, hogyan tudnak fejlődni. Ha Ön tapasztalt térképező, jelentkezzék érvényesítőnek.",
-  "user.notifications.mentions": "",
-  "user.notifications.mentions.description": "",
+  "user.notifications.mentions": "Említések",
+  "user.notifications.mentions.description": "Értesítést kap, ha valaki megemlíti Önt egy megjegyzésben.",
   "user.notifications.projects": "Projekt frissítései",
   "user.settings.required": "Szükséges mezők",
   "user.notifications.projects.description": "Értesítést kap, ha egy Ön által is szerkesztett projekt halad.",
   "user.notifications.comments": "Megjegyzések",
-  "user.notifications.comments.description": "",
+  "user.notifications.comments.description": "Értesítést kap, ha valaki megjegyzést ír egy Ön által is szerkesztett projekthez.",
   "user.settings.become_validator.button": "Tanulás",
   "user.welcome.title": "Isten hozta a Tasking Manager feladatkezelőben!",
   "user.interests.update.success": "Érdeklődési körök sikeresen frissítve.",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "Tanulja meg, hogyan kell utakat térképezni az OpenStreetMapben.",
   "pages.learn.videos.map_buildings.title": "Feladat kiválasztása & épülettérképezés",
   "pages.learn.videos.map_buildings.description": "Tanulja meg, hogyan kell épületeket térképezni az OpenStreetMapben.",
-  "pages.learn.validate.video.title": "Hogyan érvényesítsünk?",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "Érvényesítés tanulása",
   "pages.learn.validate.intro": "A folyamatnak fontos része az érvényesítés. Magabiztosságot kíván a térképkészítői képességek terén, valamint hajlandóságot arra, hogy az újabb térképészeknek segítsen, őket kísérje és tanácsokat adjon nekik.",
   "pages.learn.validate.description": "Az OpenStreetMapre felrajzolt és az egész világon felhasznált adatok minőségének biztosításához fontos lépés, hogy a feltérképezett objektumot egy második, harmadik vagy negyedik szempár is lássa.",
