--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Rimuovi filtri",
   "mytasks.navFilters.error": "Errore nel caricamento dei compiti",
   "mytasks.pagination.count": "Sto visualizzando {number} di {total}",
+  "mytasks.nav.xNew": "{xNew} Nuovo",
   "mytasks.nav.lastUpdatedBy": "Ultimo aggiornamento {time}",
   "mytasks.nav.viewAll": "Visualizza tutto",
   "mytasks.nav.delete.button": "Eliminare",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Contributi",
   "project.detail.sections.contributionsTimeline": "Cronologia dei contributi",
   "project.detail.sections.contributions.osmcha": "Gruppi di modifiche in OSMCha",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "Collaboratori",
   "project.detail.sections.relatedProjects": "Progetti collegati",
   "project.detail.sections.contributions.timelineError": "",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "Sei sicuro di voler validare tutti i task del progetto? Non potrai tornare indietro.",
   "projects.actions.validate_all_tasks.description": "",
   "projects.actions.validate_all_tasks.success": "",
-  "projects.actions.validate_all_tasks.error": "",
+  "projects.actions.validate_all_tasks.error": "L'invalidazione di tutti i Task è fallito per ragioni sconosciute.",
   "projects.actions.reset_bad_imagery_tasks.title": "",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "",
   "projects.actions.reset_bad_imagery_tasks.description": "",
@@ -344,10 +344,10 @@
   "projects.actions.clone_project.button": "Clona progetto",
   "projects.actions.clone_project.description": "",
   "projects.actions.transfer_project.button": "Trasferisci il progetto",
-  "projects.actions.transfer_project.title": "Trasferisci la proprietà del progetto",
+  "projects.actions.transfer_project.title": "",
   "projects.actions.transfer_project.alert": "",
   "projects.actions.transfer_project.success": "Il progetto è stato trasferito con successo.",
-  "projects.actions.transfer_project.error": "Trasferimento del progetto non riuscito.",
+  "projects.actions.transfer_project.error": "",
   "projects.actions.delete_project.title": "Cancella progetto",
   "projects.actions.delete_project.alert": "",
   "projects.actions.delete_project.success": "Il progetto è stato cancellato con successo.",
@@ -376,7 +376,7 @@
   "projects.formInputs.name": "Nome del progetto",
   "projects.formInputs.description": "Descrizione",
   "projects.formInputs.shortDescription": "Breve descrizione",
-  "projects.formInputs.instructions": "Istruzioni dettagliate",
+  "projects.formInputs.instructions": "",
   "projects.formInputs.osmcha_filter_id": "ID filtro OSMCha",
   "projects.formInputs.osmcha_filter_id.description": "Id opzionale di un filtro OSMCha da applicare in visualizzazione del progetto su OSMCha, se si desidera un filtro personalizzato. Attenzione in quanto questo sostituisce eventuali filtri standard. Esempio: 095e8b31-b3cb-4b36-a106-02826fb6a109 (per comodità si può anche incollare l'URL OSMCha che usa il filtro salvato e questo verrà estratto automaticamente).",
   "projects.formInputs.priority_areas.description": "Se vuoi che i mappatori lavorino prima sulle aree con priorità, disegna uno o più poligoni all'interno dell'area di progetto.",
@@ -389,7 +389,7 @@
   "projects.formInputs.per_task_instructions.descriptions": "",
   "projects.formInputs.per_task_instructions.example": "",
   "projects.formInputs.changesetComment": "Commento al gruppo di modifiche",
-  "projects.formInputs.changesetComment.example": "Esempio: #hotosm-project-470 #missingmaps Buildings mapping.",
+  "projects.formInputs.changesetComment.example": "",
   "projects.formInputs.changesetComment.description": "",
   "project.formInputs.priority.options.urgent": "Urgente",
   "project.formInputs.priority.options.high": "Alta",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Intermedio",
   "project.level.beginner": "Principiante",
   "project.level.new_users": "Nuovi utenti",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "",
   "project.permissions.error.userLevelToValidate": "",
   "project.permissions.error.userLevelToMap": "",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "",
   "user.settings.become_validator": "Diventa un validatore",
   "user.settings.become_validator.description": "",
-  "user.notifications.mentions": "",
-  "user.notifications.mentions.description": "",
+  "user.notifications.mentions": "Menzioni",
+  "user.notifications.mentions.description": "Ogni volta che sei menzionato in un commento riceverai una notifica.",
   "user.notifications.projects": "Aggiornamenti di progetto",
   "user.settings.required": "",
   "user.notifications.projects.description": "",
   "user.notifications.comments": "Commenti",
-  "user.notifications.comments.description": "",
+  "user.notifications.comments.description": "Riceverai una notifica ogni volta che qualcuno commenterà nel progetto in cui hai contribuito.",
   "user.settings.become_validator.button": "",
   "user.welcome.title": "Benvenuto in Tasking Manager!",
   "user.interests.update.success": "",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "",
   "pages.learn.videos.map_buildings.title": "",
   "pages.learn.videos.map_buildings.description": "",
-  "pages.learn.validate.video.title": "",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "",
   "pages.learn.validate.intro": "",
   "pages.learn.validate.description": "",
