--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "フィルタを解除",
   "mytasks.navFilters.error": "タスクのロード中にエラーが発生",
   "mytasks.pagination.count": "全 {total} 中、{number} を表示",
+  "mytasks.nav.xNew": "{xNew} 新",
   "mytasks.nav.lastUpdatedBy": "最終更新 {time}",
   "mytasks.nav.viewAll": "すべてを表示",
   "mytasks.nav.delete.button": "削除",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "協力",
   "project.detail.sections.contributionsTimeline": "マッピング結果のタイムライン",
   "project.detail.sections.contributions.osmcha": "OSMChaで変更セットを表示",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "参加者",
   "project.detail.sections.relatedProjects": "関連プロジェクト",
   "project.detail.sections.contributions.timelineError": "タイムラインを表示するには、1つ以上のタスクをマップする必要があります。",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "すべてのタスクを検証済みにしますか？ この作業は取り消せません。",
   "projects.actions.validate_all_tasks.description": "すべてのタスク（ '利用できない' タスクを除く）が 'マッピング済み' 状態となります。ほんとうに実施してしまって問題がない場合だけ実行してください。",
   "projects.actions.validate_all_tasks.success": "タスクは正常に検証されました。",
-  "projects.actions.validate_all_tasks.error": "",
+  "projects.actions.validate_all_tasks.error": "なんらかの理由により全てのタスクの差し戻しに失敗しました。",
   "projects.actions.reset_bad_imagery_tasks.title": "使用不可としてマークされたタスクをリセットする",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "プロジェクト内のすべてのタスクを利用不可としてマークしますか？ この作業は取り消せません。",
   "projects.actions.reset_bad_imagery_tasks.description": "すべてのタスクが '準備完了' 状態となります。ほんとうに実施してしまって問題がない場合だけ実行してください。",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "中級者",
   "project.level.beginner": "初心者",
   "project.level.new_users": "",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "プロジェクトへの参加条件を満たしていません。。。",
   "project.permissions.error.userLevelToValidate": "確認作業は中級レベルまたは上級レベルのユーザーだけが実施できます。",
   "project.permissions.error.userLevelToMap": "中級レベルまたは上級レベルのユーザーだけがマッピングに参加できます。",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "使用する言語を設定します。Tasking Managerに表示されるマップの表示言語にも影響します。",
   "user.settings.become_validator": "確認者になる",
   "user.settings.become_validator.description": "確認者は完了したマッピングの品質をチェックし、改善方法をマッパーにフィードバックします。 経験豊富なマッパーであれば、確認者になることができます。",
-  "user.notifications.mentions": "",
-  "user.notifications.mentions.description": "",
+  "user.notifications.mentions": "メンション",
+  "user.notifications.mentions.description": "コメントに返信するたびに、通知を受け取ります。",
   "user.notifications.projects": "プロジェクト更新",
   "user.settings.required": "必須項目",
   "user.notifications.projects.description": "あなたが参加したプロジェクトが進行すると通知を受け取ります。",
   "user.notifications.comments": "コメント",
-  "user.notifications.comments.description": "",
+  "user.notifications.comments.description": "あなたが参加したプロジェクトに誰かがコメントすると通知を受け取ります。",
   "user.settings.become_validator.button": "解説",
   "user.welcome.title": "Tasking Managerにようこそ！",
   "user.interests.update.success": "関心分野が正常に更新されました。",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "OpenStreetMapでの道路マッピング方法",
   "pages.learn.videos.map_buildings.title": "タスクを選択し、建物をマッピング",
   "pages.learn.videos.map_buildings.description": "OpenStreetMapでの建物マッピング方法",
-  "pages.learn.validate.video.title": "検証方法",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "検証作業について",
   "pages.learn.validate.intro": "一連の作業プロセスにおいて、検証作業は重要な位置を占めます。検証作業には、マッピングする能力だけではなく、コーチングやアドバイスを通じて新しく参加するマッパーを支援する気持ちが必要となります。",
   "pages.learn.validate.description": "二度三度、そしてさらに多くの目でマッピングされた地物の確認を行うことは、世界中から利用されるOpenStreetMapのデータ品質を確認する上でたいへん重要です。",
