--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Rensa filter",
   "mytasks.navFilters.error": "Fel vid inläsning av uppgifterna",
   "mytasks.pagination.count": "Visar {antal} av {total}",
+  "mytasks.nav.xNew": "{xNew} Ny",
   "mytasks.nav.lastUpdatedBy": "",
   "mytasks.nav.viewAll": "Visa alla",
   "mytasks.nav.delete.button": "Radera",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Bidrag",
   "project.detail.sections.contributionsTimeline": "Tidslinje för bidrag",
   "project.detail.sections.contributions.osmcha": "Ändringar i OSMCha",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "Bidragsgivare",
   "project.detail.sections.relatedProjects": "Relaterade projekt",
   "project.detail.sections.contributions.timelineError": "En tidslinje kommer att vara tillgänglig när den första uppgiften har karterats.",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Mellanliggande",
   "project.level.beginner": "Nybörjare",
   "project.level.new_users": "",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "",
   "project.permissions.error.userLevelToValidate": "",
   "project.permissions.error.userLevelToMap": "",
@@ -704,7 +703,7 @@
   "user.settings.language.description": "",
   "user.settings.become_validator": "Bli validerare",
   "user.settings.become_validator.description": "",
-  "user.notifications.mentions": "",
+  "user.notifications.mentions": "Omnämnande",
   "user.notifications.mentions.description": "",
   "user.notifications.projects": "",
   "user.settings.required": "",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "",
   "pages.learn.videos.map_buildings.title": "",
   "pages.learn.videos.map_buildings.description": "",
-  "pages.learn.validate.video.title": "",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "",
   "pages.learn.validate.intro": "",
   "pages.learn.validate.description": "",
