--- a/frontend/src/locales/tr.json
+++ b/frontend/src/locales/tr.json
@@ -17,6 +17,7 @@
   "mytasks.filter.clear": "Filtreleri temizle",
   "mytasks.navFilters.error": "Görevler yüklenirken hata oluştu",
   "mytasks.pagination.count": "{total} içinden {number} gösteriliyor",
+  "mytasks.nav.xNew": "{xNew} Yeni",
   "mytasks.nav.lastUpdatedBy": "Son güncelleme {time}",
   "mytasks.nav.viewAll": "Hepsini Görüntüle",
   "mytasks.nav.delete.button": "Sil",
@@ -272,7 +273,6 @@
   "project.detail.sections.contributions": "Katkılar",
   "project.detail.sections.contributionsTimeline": "Katkı zaman çizelgesi",
   "project.detail.sections.contributions.osmcha": "OSMCha'daki değişiklikler",
-  "project.detail.sections.contributions.changesets": "",
   "project.detail.sections.contributors": "Katılımcılar",
   "project.detail.sections.relatedProjects": "İlişkili projeler",
   "project.detail.sections.contributions.timelineError": "Zaman çizelgesi, en az bir görev haritalandığında erişime açık olacak.",
@@ -329,7 +329,7 @@
   "projects.actions.validate_all_tasks.confirmation": "Tüm görevleri doğrulamak istediğinizden emin misiniz? Bu işlemi geri alamazsınız.",
   "projects.actions.validate_all_tasks.description": "Bu işlem, tüm görevlerin durumunu ('erişime kapalı' olanlar hariç) 'tamamlanmış' olarak değiştirecek. Lütfen bunu yalnızca ne yaptığınızdan eminseniz kullanın.",
   "projects.actions.validate_all_tasks.success": "Görevler başarıyla doğrulandı.",
-  "projects.actions.validate_all_tasks.error": "",
+  "projects.actions.validate_all_tasks.error": "Tüm görevlerin geçersiz kılınması işlemi bilinmeyen bir nedenden dolayı başarısız oldu.",
   "projects.actions.reset_bad_imagery_tasks.title": "Erişime kapalı olarak işaretlenmiş görevleri sıfırla",
   "projects.actions.reset_bad_imagery_tasks.confirmation": "Bu projede erişime kapalı olarak işaretlenmiş tüm görevleri sıfırlamak istediğinizden emin misiniz? Bunu geri alamazsınız.",
   "projects.actions.reset_bad_imagery_tasks.description": "Bu, söz konusu görevlerin durumunu 'haritalamaya hazır' olarak değiştirecek. Lütfen bunu yalnızca yaptığınızdan eminseniz kullanın.",
@@ -613,7 +613,6 @@
   "project.level.intermediate": "Orta Seviye",
   "project.level.beginner": "Başlangıç Seviyesi",
   "project.level.new_users": "",
-  "project.contributions.stats": "",
   "project.permissions.error.title": "Bu proje üzerinde çalışmaya hazır değilsiniz...",
   "project.permissions.error.userLevelToValidate": "Yalnızca orta veya ileri seviyeli kullanıcılar bu projeyi doğrulayabilir.",
   "project.permissions.error.userLevelToMap": "Yalnızca orta veya ileri seviyeli kullanıcılar bu projeyi haritalayabilir",
@@ -704,13 +703,13 @@
   "user.settings.language.description": "Tercih ettiğiniz dili belirleyin. Bu, aynı zamanda Görev Yöneticisi'nde gördüğünüz haritaların dilini de etkileyecektir. ",
   "user.settings.become_validator": "Doğrulayıcı ol",
   "user.settings.become_validator.description": "Doğrulayıcılar, tamamlanan harita düzenlemelerinin niteliğini denetler ve haritacılara nasıl daha iyisini yapabilecekleri hakkında geribildirim sağlar. Deneyimli bir haritacıysanız, doğrulayıcı olmak için başvurun.",
-  "user.notifications.mentions": "",
-  "user.notifications.mentions.description": "",
+  "user.notifications.mentions": "Bahsedenler",
+  "user.notifications.mentions.description": "Bir yorumda sizden bahsedildiğinde bildirim alırsınız.",
   "user.notifications.projects": "Proje güncellemeleri",
   "user.settings.required": "Gerekli alanlar",
   "user.notifications.projects.description": "Katkıda bulunduğunuz bir proje ilerleme kaydettiğinde bildirim alırsınız.",
   "user.notifications.comments": "Yorumlar",
-  "user.notifications.comments.description": "",
+  "user.notifications.comments.description": "Katkıda bulunduğunuz proje hakkında biri yorum yaptığında bildirim alırsınız.",
   "user.settings.become_validator.button": "Nasıl?",
   "user.welcome.title": "Görev Yöneticisine hoşgeldiniz!",
   "user.interests.update.success": "İlgi alanları başarıyla güncellendi.",
@@ -859,8 +858,6 @@
   "pages.learn.videos.map_roads.description": "",
   "pages.learn.videos.map_buildings.title": "",
   "pages.learn.videos.map_buildings.description": "",
-  "pages.learn.validate.video.title": "Nasıl doğrulanıyor?",
-  "pages.learn.validate.video.description": "",
   "pages.learn.validate_title": "Doğrulamayı öğrenin",
   "pages.learn.validate.intro": "Doğrulama işlemi haritalama sürecinin önemli bir parçasıdır. Haritalama yeteneklerinize güven duymalı, ve başlangıç seviyesindeki haritacılara yardımcı olmaya gönüllü olmalısınız.",
   "pages.learn.validate.description": "Haritadaki detayların ikinci, üçüncü veya dördüncü bir çift göz tarafından incelenmesi, OpenStreetMap’e eklenen ve daha sonra tüm dünyada kullanılan verilerin kalitesinden emin olmak için önemli bir adımdır.",
